admin completed + PWA props

--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <meta name="author" content="Fadarse" />
     <meta property="sp:image" content="/superchefs-logo.png" />
     <link rel="icon" href="/superchefs-logo.png" />
+    <!-- <link rel="manifest" href="/manifest.json" /> -->
   </head>
 
   <body>
