--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <meta name="author" content="Fadarse" />
     <meta property="sp:image" content="/superchefs-logo.png" />
     <link rel="icon" href="/superchefs-logo.png" />
+    <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon180.png" />
     <!-- <link rel="manifest" href="/manifest.json" /> -->
   </head>
 
